--- a/source/app/src/main/res/values/strings.xml
+++ b/source/app/src/main/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="app_name">ATinyShop</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="facebook_app_id">509778825853361</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_main2">Main2Activity</string>
+
 
 </resources>
